// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleContainer Component no data should render correctly 1`] = `null`;

exports[`ArticleContainer Component should render Persian article correctly 1`] = `
<React.Fragment>
  <ServiceContextProvider
    service="persian"
  >
    <Header />
    <Metadata
      amp={false}
      articleAuthor="https://www.facebook.com/bbcnews"
      articleSection={null}
      canonicalLink="https://www.bbc.com/persian/articles/c0000000028o"
      defaultImage="https://news.files.bbci.co.uk/ws/img/logos/og/persian.png"
      defaultImageAltText="BBC News فارسی"
      description="خلاصه مقاله"
      lang="fa"
      locale="fa"
      metaTags={Array []}
      opengraphSiteName="BBC News فارسی"
      timeFirstPublished="2018-01-01T12:01:00.000Z"
      timeLastUpdated="2018-01-01T13:00:00.000Z"
      title="سرصفحه مقاله"
      twitterCreator="@bbcpersian"
      twitterSite="@bbcpersian"
      type="article"
    />
    <MainContentContainer
      blocks={
        Array [
          Object {
            "model": Object {
              "blocks": Array [
                Object {
                  "blockId": "t-1",
                  "model": Object {
                    "blocks": Array [
                      Object {
                        "blockId": "p-1",
                        "model": Object {
                          "text": "سرصفحه مقاله",
                        },
                        "type": "paragraph",
                      },
                    ],
                  },
                  "type": "text",
                },
              ],
            },
            "type": "headline",
          },
          Object {
            "blockId": "t-2",
            "model": Object {
              "blocks": Array [
                Object {
                  "blockId": "p-2",
                  "model": Object {
                    "text": "یک پاراگراف.",
                  },
                  "type": "paragraph",
                },
              ],
            },
            "type": "text",
          },
        ]
      }
    />
    <FooterContainer />
  </ServiceContextProvider>
</React.Fragment>
`;

exports[`ArticleContainer Component should render correctly 1`] = `
<React.Fragment>
  <ServiceContextProvider
    service="news"
  >
    <Header />
    <Metadata
      amp={false}
      articleAuthor="https://www.facebook.com/bbcnews"
      articleSection={null}
      canonicalLink="https://www.bbc.com/news/articles/c0000000001o"
      defaultImage="https://www.bbc.co.uk/news/special/2015/newsspec_10857/bbc_news_logo.png?cb=1"
      defaultImageAltText="BBC News"
      description="Article summary."
      lang="en-gb"
      locale="en_GB"
      metaTags={Array []}
      opengraphSiteName="BBC News"
      timeFirstPublished="2018-01-01T12:01:00.000Z"
      timeLastUpdated="2018-01-01T13:00:00.000Z"
      title="Article Headline for SEO"
      twitterCreator="@BBCNews"
      twitterSite="@BBCNews"
      type="article"
    />
    <MainContentContainer
      blocks={
        Array [
          Object {
            "model": Object {
              "blocks": Array [
                Object {
                  "blockId": "t-1",
                  "model": Object {
                    "blocks": Array [
                      Object {
                        "blockId": "p-1",
                        "model": Object {
                          "text": "Article Headline",
                        },
                        "type": "paragraph",
                      },
                    ],
                  },
                  "type": "text",
                },
              ],
            },
            "type": "headline",
          },
          Object {
            "blockId": "t-2",
            "model": Object {
              "blocks": Array [
                Object {
                  "blockId": "p-2",
                  "model": Object {
                    "text": "A paragraph.",
                  },
                  "type": "paragraph",
                },
              ],
            },
            "type": "text",
          },
        ]
      }
    />
    <FooterContainer />
  </ServiceContextProvider>
</React.Fragment>
`;
